--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        opm install opm@1.0.2
+        opm install opm@
         opm install 1testrunner;
         opm install 1bdd;
         opm install coverage;
