#216 Тесты под новый формат конфига.

--- a/tests/fixtures/opm-servers.cfg
+++ b/tests/fixtures/opm-servers.cfg
@@ -11,7 +11,11 @@
             "Имя":"mylocalhost",
             "Сервер": "http://localhost",
             "Порт": 8000,
-            "ПутьНаСервере":"/"
+            "ПутьНаСервере":"/",
+            "Авторизация": "",
+            "Заголовки": {
+                "X-Dummy": "${USERNAME}"
+            }
         }
     ]
 }
