#216 Таймаут в примере opm.cfg

--- a/tests/fixtures/opm-example.cfg
+++ b/tests/fixtures/opm-example.cfg
@@ -21,6 +21,7 @@
             "Имя":"mylocalhost",
             "Сервер": "http://localhost",
             "Порт": 8000,
+            "Таймаут": 600,
             "ПутьНаСервере":"/",
             "Авторизация": "OAUTH_TOKEN ${OPM_OAUTH_TOKEN}",
             "Заголовки": {
