--- a/tests/fixtures/opm-servers.cfg
+++ b/tests/fixtures/opm-servers.cfg
@@ -16,6 +16,12 @@
             "Заголовки": {
                 "X-Dummy": "${USERNAME}"
             }
+        },
+        {
+            "Имя": "Файловый",
+            "Сервер": "file://",
+            "ПутьНаСервере": "C:\\opm\\hub",
+            "Приоритет": 2
         }
     ]
 }
